--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
     background-color: var(--background-color);
     overflow: hidden;
     border-bottom: 0.1rem solid rgba(247, 239, 239, 0.918);
-  
+    font-family: Londrina Solid;
   }
   .topnav a {
     color: white;
@@ -19,7 +19,7 @@
     text-decoration: none;
     padding: 20px 18px;
     margin-bottom: 3px;    
-
+    font-family: Londrina Solid;
   }
   .topnav a:hover{
     background-color:  #FBEAEB;
@@ -40,6 +40,7 @@
     padding: 20px 18px;
     margin-bottom: 3px;
     text-decoration: none;
+    font-family: Londrina Solid;
   }
   .topnav button:hover {
     background-color: rgb(130, 70, 17);
@@ -52,6 +53,7 @@
 
   body {
     background-color: var(--background-color);
+    font-family: Londrina Solid;
   }
 button {
     
@@ -65,6 +67,7 @@ button {
         margin-bottom: 3px;
         gap: 2000px;
         text-decoration: none;
+        font-family: Londrina Solid;
 
       }
       button:hover {
