--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 :root {
-    --background-color: rgb(3, 18, 67);
+    --background-color: #002244;
     --border-color: rgba(247, 239, 239, 0.918);
     --highlight-color: rgb(142, 99, 215);
     --navbar-color: rgb(190, 190, 245);
@@ -26,12 +26,12 @@
   }
 
   .topnav a.active {
-    background-color: gray;
+    background-color: #72A0C1;
     color: wheat;
   }
 
   .topnav button {
-    background-color:  gray;
+    background-color:  #72A0C1;
     color: wheat;
     font-size: 25px;
     float: right;
@@ -57,7 +57,7 @@
   }
 button {
     
-        background-color:  gray;
+        background-color:  #72A0C1;
         color: wheat;
         font-size: 25px;
         align-items: center;
@@ -65,9 +65,9 @@ button {
         border-radius: 10%;
         padding: 20px 18px;
         margin-bottom: 3px;
-        gap: 2000px;
         text-decoration: none;
         font-family: Londrina Solid;
+
 
       }
       button:hover {
@@ -76,32 +76,101 @@ button {
       .btn1{
         margin-right: 150px;
         margin-left: 120px;
-        background-color:  gray;
+        background-color:  #72A0C1;
         color: wheat;
         text-decoration: none;
+        
         }
         .btn2{
 
             margin-right: 150px;
-            background-color:  gray;
+            background-color:  #72A0C1;
             color: wheat;
+            
             
             }
             .btn3{
-                background-color:  gray;
+                background-color:  #72A0C1;
                 color: wheat;
                 margin-right: 150px;
                 
                 }
                 .btn4{
-                    background-color:  gray;
+                    background-color:  #72A0C1;
                     color: wheat;
                     margin-right: 150px;
                     
                     }
                     .btn5{
-                        background-color:  gray;
+                        background-color:  #72A0C1;
                         color: wheat;
                         
                         
                         }
+
+                        
+.glow-on-hover {
+
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #72A0C1;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  margin-top: 2px;
+  border-radius: 10%;
+  padding: 20px 18px;
+  margin-bottom: 3px;
+  margin-left: 22px;
+  
+}
+
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #72A0C1;
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #72A0C1;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
+}
