--- a/comingsoon.css
+++ b/comingsoon.css
@@ -4,3 +4,6 @@
         box-sizing: border-box;
         font-family: londrina 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
+    body{
+        background-image: ;
+    }
