--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ button {
       button:hover {
         background-color: rgb(130, 70, 17);
       }
-      .btn1{
+      /* .btn1{
         margin-right: 150px;
         margin-left: 120px;
         background-color:  #72A0C1;
@@ -106,7 +106,7 @@ button {
                         color: wheat;
                         
                         
-                        }
+                        } */
 
                         
 .glow-on-hover {
