--- a/comingsoon.css
+++ b/comingsoon.css
@@ -4,3 +4,10 @@
         box-sizing: border-box;
         font-family: londrina 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 100%;
+      }
