--- a/comingsoon.css
+++ b/comingsoon.css
@@ -8,6 +8,11 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
-        height: 100%;
+        width: auto;
+        height: auto;
+      }
+      .paragraph{
+        position: relative;
+        text-align: center;
+        color: white;
       }
