--- a/comingsoon.css
+++ b/comingsoon.css
@@ -1,18 +1,184 @@
-* {
-        border: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: londrina 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    }
-    .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: auto;
-        height: auto;
-      }
-      .paragraph{
-        position: relative;
-        text-align: center;
-        color: white;
-      }
+/* 
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    height: 950px;
+  }
+  .paragraph{
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+   */
+/* 
+   body {
+    background-image: url("/Images/wallpaperflare.com_wallpaper.jpg");
+    background-color: #cccccc;
+    background-size: auto;
+    margin-left: auto;
+    margin-right: auto;
+   }
+    */
+
+
+
+
+
+
+
+
+
+
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      font-family: londrina 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+
+  body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100vh;
+    background-color: #333;
+
+  }
+  .container{
+    position: relative;
+    display: flex;
+    padding: 80px 40px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 80px;
+  }
+  .card{
+    position: relative;
+    width: 350px;
+    height: 180px;
+    background-color: #fff;
+    transition: 0.5s;
+
+  }
+
+  .card:hover{
+    height: 450px;
+  }
+
+  .card .lines{
+    position: absolute;
+    inset: 0;
+    background: #000;
+    overflow: hidden;
+  }
+  .card .lines::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 600px;
+    height: 120px;
+    background: linear-gradient(transparent, #45f3ff, #45f3ff, #45f3ff, transparent);
+    animation: animate 4s linear infinite;
+    animation-play-state: paused;
+  
+  }
+.card:hover .lines::before{
+  animation-play-state: running;
+}
+
+@keyframes animate
+{
+  0%
+  {
+    transform: translate(-50%, -50%) rotate(0deg);
+
+  }
+  100%{
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+
+
+.card .lines::after{
+  content: '';
+  position: absolute;
+  inset: 3px;
+  background: #292929;
+}
+
+.card .imgBx{
+  position: absolute;
+  top: -60%;
+  left: 50%;
+  width: 150px;
+  height: 150px;
+  transform: translate(-50%);
+  background: #000;
+  transition: 0.5s;
+  z-index: 10;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.card:hover .imgBx{
+  top: 25px;
+  width: 250px;
+  height:250px;
+}
+.card .imgBx::before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 150px;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(transparent, #ff3c7b, #ff3c7b, #ff3c7b, transparent);
+  animation: animate 6s linear infinite;
+  animation-play-state: paused;
+}
+
+.card:hover .imgBx::before{
+  animation-play-state: running;
+}
+@keyframes animate2
+{
+  0%
+  {
+    transform: translate(-50%, -50%) rotate(360deg);
+
+  }
+  100%{
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+}
+.card .imgBx::after{
+  content: '';
+  position: absolute;
+  inset: 3px;
+  background: #292929;
+
+}
+
+.card .imgBx img{
+  position: absolute;
+  z-index: 1;
+  filter: invert(1);
+  opacity: 0.5s;
+  transition: 0.5s;
+}
+
+.card:hover .imgBx img{
+
+  opacity: 1;
+
+}
