--- a/comingsoon.css
+++ b/comingsoon.css
@@ -40,6 +40,7 @@
   }
 
   body{
+    margin-top: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -114,7 +115,7 @@
 
 .card .imgBx{
   position: absolute;
-  top: -60%;
+  top: -50%;
   left: 50%;
   width: 150px;
   height: 150px;
@@ -130,9 +131,9 @@
 }
 
 .card:hover .imgBx{
-  top: 25px;
-  width: 250px;
-  height:250px;
+  top: 10px;
+  width: 200px;
+  height:200px;
 }
 .card .imgBx::before{
   content: '';
@@ -178,7 +179,77 @@
 }
 
 .card:hover .imgBx img{
-
   opacity: 1;
-
 }
+
+.card .content{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+
+.card .content .details{
+
+  padding: 60px 30px;
+  text-align: center;
+  width: 100%;
+  transition: 0.5s;
+  transform: translateY(145px);
+}
+
+.card:hover .content .details{
+  transform: translateY(0px);
+}
+.card .content .details h2{
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1rem;
+  color: #72A0C1;
+  
+ 
+}
+
+.card .content .details p{
+opacity: 0;
+transition: 0.5s;
+  color: #72A0C1;
+}
+
+/* .card:hover .content .details p{
+
+    margin-bottom:3px;
+  } */
+
+
+
+  .card:hover .content .details a{
+    
+    display: inline-block;
+    padding: 8px 15px;
+    background:#72A0C1 ;
+    color: #292929;
+    margin-bottom:0px;
+    font-weight: 500;
+    text-decoration: none;
+    opacity: 0;
+    transition: 0.5s;
+
+     }
+
+     .card:hover .content .details p,
+     .card:hover .content .details a{
+      opacity: 1;
+       }
+
+
+
+
+
+
+
+       
