--- a/index.css
+++ b/index.css
@@ -6,6 +6,24 @@
 }
 
 
+.font{
+ text-align: center;
+ color: wheat;
+ font-size: 55px;
+
+
+}
+h2{
+  color: white;
+  font-size: 40px;
+  text-align: center;
+}
+h3{
+  color: white;
+  text-align: center;
+  font-size: ;
+}
+
 .topnav {
   background-color: var(--background-color);
   overflow: hidden;
@@ -158,8 +176,4 @@ button:hover {
   100% {
     background-position: 0 0;
   }
-}
-
-.h1{
-  color: white !important;  
 }
