--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
+.h2{
+  color: white !important;  
+}
 body {
     height: 100vh;
 }
