--- a/index.css
+++ b/index.css
@@ -4,7 +4,10 @@
   --highlight-color: rgb(142, 99, 215);
   --navbar-color: rgb(190, 190, 245);
 }
-
+/* img{
+  width: 100%;
+  height: 100%;
+} */
 .font{
  text-align: center;
  color: wheat;
@@ -31,7 +34,7 @@ h3{
 }
 
 .topnav a {
-  color: white;
+          color: white;
   float: left;
   font-size: 25px;
   text-decoration: none;
@@ -65,10 +68,55 @@ h3{
 .topnav button:hover {
   background-color: rgb(130, 70, 17);
 }
+/* .pic{
+  float: right;
+  margin-right: 250px;
+  margin-top: 25px;
+} */
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--background-color);
+  
+}
 
 img {
-  width: 85%;
-  height: 650px;
+  max-width: 100%;
+  height: 500px;
+  padding-top: 20px;
+}
+.image {
+  flex-basis: 70%
+}
+
+
+
+.texty {
+  font-size: 20px;
+  padding-left: 0px;
+  flex-basis: 60%;
+  color: white;
+}
+.text{
+  color: white;
+  padding-left: 22px;
+}
+/* }
+img {
+
+  width: 35%;
+  height: 35%;
+
+  margin-left: 250px;
+  margin-right: 25px;
+} */
+.bottomleft {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  font-size: 18px;
 
 }
 
